# DipteraTrack

./: BoundingBoxWidget.py  CMakeLists.txt  ContourViewWidget.py  DipteraTrack.py  FlightTracker_lib.cpp  ImageSegmentWidget.py  LICENSE  ModelViewWidget.py  README.md  ScaleModelWidget.py  SessionParamWidget.py  abdomen.stl  contour_optimization.cpp  contour_optimization.h  diptera_track.ui  diptera_track_ui.py  flight_tracker_class.cpp  flight_tracker_class.h  flight_tracker_class.py  focal_grid.cpp  focal_grid.h  frame_data.h  frame_loader.cpp  frame_loader.h  head.stl  image_segmentation.cpp  image_segmentation.h  initial_state.cpp  initial_state.h  model_class.cpp  model_class.h  save_model_dat_file.cpp  session_data.h  wing_L.stl  wing_R.stl
cmake/Modules/: BuildBoost.cmake
insect_models/: CMakeLists.txt
insect_models/drosophila_melanogaster/: abdomen.stl  head.stl  thorax.stl  wing_L.stl  wing_R.stl
insect_models/drosophila_melanogaster_v1/: drosophila_melanogaster.json  thorax.stl
